--- a/starter_code/styles.css
+++ b/starter_code/styles.css
@@ -3,6 +3,10 @@
   margin: 0;
 }
 
+/* .container {
+  display: none;
+
+} */
 
 #canvas {
   border: 2px solid red;
@@ -10,5 +14,12 @@
   
 }
 
+.col-sm-2 img {
+  width:100%;
+  height:100%;
 
-
+}
+/* 
+.jumbotron {
+  width: 100%
+} */
