--- a/starter_code/styles.css
+++ b/starter_code/styles.css
@@ -10,6 +10,7 @@
 
 #canvas {
   border: 2px solid red;
+  width:100%;
 
   
 }
@@ -23,3 +24,36 @@
 .jumbotron {
   width: 100%
 } */
+
+
+#game-over {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: black;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 2em;
+  display: none;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+}
+
+#start {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: black;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  z-index: 8;
+}
+
